Readding directives to sultion 1
34 cycles latency

--- a/SobelMatrixMultiplier/.cproject
+++ b/SobelMatrixMultiplier/.cproject
@@ -25,12 +25,13 @@
 								<option id="gnu.cpp.compiler.exe.debug.option.optimization.level.568640277" name="Optimization Level" superClass="gnu.cpp.compiler.exe.debug.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.exe.debug.option.debugging.level.548989196" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.948892968" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620/Repositories/FPGAColorIdentifier"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/etc"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/auto_cc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/systemc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/ap_sysc"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.80002779" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="AESL_TB"/>
@@ -43,12 +44,13 @@
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.exe.debug.option.optimization.level.384895210" name="Optimization Level" superClass="gnu.c.compiler.exe.debug.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option id="gnu.c.compiler.exe.debug.option.debugging.level.1490582005" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.137247037" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620/Repositories/FPGAColorIdentifier"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/etc"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/auto_cc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/systemc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/ap_sysc"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.29220288" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="AESL_TB"/>
@@ -111,12 +113,13 @@
 								<option id="gnu.cpp.compiler.exe.release.option.optimization.level.238860914" name="Optimization Level" superClass="gnu.cpp.compiler.exe.release.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.exe.release.option.debugging.level.653702782" name="Debug Level" superClass="gnu.cpp.compiler.exe.release.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.355531357" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620/Repositories/FPGAColorIdentifier"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/etc"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/auto_cc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/systemc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/ap_sysc"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.817584927" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -124,12 +127,13 @@
 								<option defaultValue="gnu.c.optimization.level.most" id="gnu.c.compiler.exe.release.option.optimization.level.1750454338" name="Optimization Level" superClass="gnu.c.compiler.exe.release.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
 								<option id="gnu.c.compiler.exe.release.option.debugging.level.12575385" name="Debug Level" superClass="gnu.c.compiler.exe.release.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.1364126594" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620/Repositories/FPGAColorIdentifier"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/etc"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/auto_cc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/win64/tools/systemc/include"/>
 									<listOptionValue builtIn="false" value="C:/Xilinx/Vivado/2017.4/include/ap_sysc"/>
+									<listOptionValue builtIn="false" value="C:/Users/db217620"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1553070505" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
